@@ -1,6 +1,7 @@
 gae-wiki 1.2
 
 - Fixed a bug with /w/changes in open-reading wikis.
+- Fixed a the extra_styles setting.
 - Added some caching to increase performance.
 - Added support for time zones.
 - Added a way to disable anonymous edits, but allow all logged in users.
